--- a/styles/video.css
+++ b/styles/video.css
@@ -24,6 +24,7 @@
 
 .thumbnail-row{
   margin-bottom: 12px;
+  position: relative;
 }
 .video-auth,.video-stats{
   font-size: 13px;
@@ -39,4 +40,20 @@
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 16px;
   row-gap: 40px;
+}
+
+.video-time{
+  background-color: black;
+  color: white;
+  position: absolute;
+  bottom: 8px;
+  right: 5px;
+  font-family: Roboto, Arial;
+  font-size: 12px;
+  font-weight: 500;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 4px;
+  padding-right: 4px;
+  border-radius: 2px;
 }
