--- a/styles/header.css
+++ b/styles/header.css
@@ -45,9 +45,10 @@
   height: 36px;
   padding-left: 10px;
   font-size: 16px;
-  border-width: 1px;
+  /* border-width: 1px;
   border-style: solid;
-  border-color: rgb(192,192,192);
+  border-color: rgb(192,192,192); */
+  border: 1px solid, rgb(182,192,192);
   border-radius: 2px;
   box-shadow: inset 1px 2px 3px rgba(0,0,0,0.05);
   /*inset means inside of the block or button if we want the shadow
@@ -85,7 +86,7 @@
 .search-button .tooltip,
 .voice-search-button .tooltip,
 .upload-icon-container .tooltip{
-  font-family: Roboto, Arial;
+  /* font-family: Roboto, Arial; */
   position: absolute;
   background-color: gray;
   color: white;
@@ -162,7 +163,7 @@
   right: -5px;
   background-color: rgb(200,0,0);
   color: white;
-  font-family: Roboto, Arial;
+  /* font-family: Roboto, Arial; */
   font-size: 11px;
   padding-left: 5px;
   padding-right: 5px;
